// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list renders correctly 1`] = `
.c4 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c4:hover {
  opacity: 0.90;
}

.c4:focus {
  outline: none;
}

.c4:active {
  opacity: 0.80;
}

.c5 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c3 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  margin-top: 16px;
}

.c0 {
  padding: 16px;
}

.c2 {
  padding: 8px 0px 0px;
}

@media (max-width:47.9375em) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="c1 c2"
  >
    <div>
      <div
        className="c3"
      >
        <h2>
          Users
        </h2>
        <button
          className="c4 c5"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           
          <span
            className="c6"
          >
            Create User
          </span>
        </button>
      </div>
      <div
        className="c7"
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 2`] = `
.c4 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c4:hover {
  opacity: 0.90;
}

.c4:focus {
  outline: none;
}

.c4:active {
  opacity: 0.80;
}

.c5 {
  background-color: transparent;
  border: 1px solid;
}

.c1 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
}

.c10 {
  cursor: pointer;
}

.c8 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  margin: 0px;
}

.c12 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
}

.c11 {
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

.c3 {
  margin: 0px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  margin-top: 16px;
}

.c0 {
  padding: 16px;
}

.c2 {
  padding: 8px 0px 0px;
}

@media (max-width:47.9375em) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="c1 c2"
  >
    <div>
      <div
        className="c3"
      >
        <h2>
          Users
        </h2>
        <button
          className="c4 c5"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           
          <span
            className="c6"
          >
            Create User
          </span>
        </button>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <p
            className="c9"
          >
            test
          </p>
          <i
            className="c10 c11 far fa-trash-alt"
            onClick={[Function]}
          />
        </div>
        <div
          className="c8"
        >
          <p
            className="c9"
          >
            admin
          </p>
          <p
            className="c12"
          >
            admin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
